5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1728_2505.log
== TEST (2019-05-15 16:52:26) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")
print(k)		
		
-- ERROR:
File "XXXX", line 3
    print(k)		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:52:50) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")

print(x)		
		
-- ERROR:
File "XXXX", line 4
    print(x)		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:53:10) 
-- CODE:
x=eval(input("Digite o angulo: "))


print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:54:06) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")

print(k)		
		
-- ERROR:
File "XXXX", line 4
    print(k)		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:54:36) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")

print("k")		
		
-- ERROR:
File "XXXX", line 4
    print("k")		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:54:45) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")

print('k')		
		
-- ERROR:
File "XXXX", line 4
    print('k')		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:55:12) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")
print(k)		
		
-- ERROR:
File "XXXX", line 3
    print(k)		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:55:17) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: "))
print(k)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 16:55:32) 
-- CODE:
x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: "))
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=eval(input())
  File "<string>", line 1, in <module>
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:24) 
-- CODE:
from  math import 

x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")) 
t=1
soma=x

print(x)		
		
-- ERROR:
File "XXXX", line 1
    from  math import 
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:41) 
-- CODE:
from  math import *

x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")) 
t=1
soma=x

print(x)		
		
-- OUTPUT:
1.5707963267948966
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:55:38) 
-- CODE:
from  math import *

x=eval(input("Digite o angulo: "))
k=int(input("Digite o numero de termos: ")) 
t=1
soma=x

print(x/k)		
		
-- OUTPUT:
0.3141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
